--- a/style.css
+++ b/style.css
@@ -38,7 +38,7 @@ body {
   color: gray;
   width: 100%;
   height: 100%;
-  background-image: url("img/spaceships.png");
+  background-image: url("https://github.com/GameSphere-MultiPlayer/GameSphere/assets/56786344/0de2ae58-78fd-4b15-9ed6-d39a0ea17bbd");
   background-size: 800% 200%;
   background-repeat: no-repeat;
   background-color: black;
@@ -108,7 +108,4 @@ body {
   100% {
     background-position: 30% 50%;
   }
-}
-#botonPlay :hover{
-  cursor: pointer;
 }
